# BOOTMUX

./: .gitignore  README.md  SECURITY.md
companion/: README.md  codex.go  go.mod  main.go  mirror.go  mirror_test.go  probe.go  protocol.go  server.go  server_test.go
companion/judge/: index.html
docs/: ARCHITECTURE.md  ARCHITECTURE_BLUEPRINT.md  BUILD_WEEK_SUBMISSION_ROADMAP.md  COMPANION_PROTOCOL_V1.md  HACKATHON_V1.md  NEXT_IMPLEMENTATION_TASK.md  OPENAI_BUILD_WEEK.md  PROJECT_STORY.md  PUBLICATION_SAFETY.md  ROADMAP.md  ROADMAP_BLUEPRINT.md  SAI_RESEARCH_BLUEPRINT.md  SAI_RESEARCH_HYPOTHESES.md  SAI_RESEARCH_ROADMAP.md
docs/evidence/: LOCAL_WIFI_SECRET.md  R7D_SAFE_VM_RECOVERY.md  V1_PHYSICAL_KEYBOARD_PATH.md  V6_INTEGRATED_DEMO.md  (+5 more)
firmware/esp32s3-router-spike/main/: CMakeLists.txt  ble_wifi_runtime.c  ble_wifi_runtime.h  http_connect_proxy.c  http_connect_proxy.h  idf_component.yml  main.c  usb_descriptors.c  usb_descriptors.h  usb_router.c  usb_router.h
iphone/: README.md
judge/: README.md  index.html
scripts/: bootmux-copy-local-wifi-secret.py  bootmux-demo-network-up.sh  bootmux-demo-shell.sh  bootmux-proxy-forwarder.py  bootmux-vm-relay.py  check-contract-sync.py
tools/: bootmux_tcp_forward.py
vm/: DEMO_RUNBOOK.md  README.md  bootmux-lima.yaml  clone-demo-vm.sh  create-clean-vm.sh  install-codex.sh  open-focused-vm-shell.sh  provision-companion.sh  run-codex-prompt.sh  run-integrated-demo.sh  run-physical-demo.sh  start-companion.sh  start-hid-target.sh  start-hid-target_test.sh  start-host-forwarder.sh  verify-clean-state.sh  verify-network.sh
(+37 files in other folders)
